fixing styling overlapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -504,7 +504,7 @@ section:nth-of-type(6):has(a) a:last-child {
 /* Visual try out */
 /******************************/
 /*  section  */
-section:nth-of-type(7) {
+section:nth-of-type(7):has(a) {
 	background: var(--color-pink-100);
 	display: flex;
 	align-items: center;
@@ -515,13 +515,13 @@ section:nth-of-type(7) {
 }
 
 /*  h2  */
-section:nth-of-type(7) h2 {
+section:nth-of-type(7):has(a) h2 {
 	color: var(--color-white);
 	margin-top: -14.5em;
 	font-size: 1.5em;
 }
 
-section:nth-of-type(7) img {
+section:nth-of-type(7):has(a) img {
 	max-width: 25em;
 	height: 35em;
 	border-radius: 3em;
@@ -530,7 +530,7 @@ section:nth-of-type(7) img {
 }
 
 /*  a  */
-section:nth-of-type(7) a:last-child {
+section:nth-of-type(7):has(a) a:last-child {
 	border-radius: 0.5em;
 	background-color: var(--color-white);
 	padding: 0.8em 1.1em;
